@@ -1,4 +1,4 @@
-/* $Id: tif_open.c,v 1.27 2005-09-12 16:31:04 fwarmerdam Exp $ */
+/* $Id: tif_open.c,v 1.28 2005-11-21 03:35:05 fwarmerdam Exp $ */
 
 /*
  * Copyright (c) 1988-1997 Sam Leffler
@@ -357,8 +357,20 @@ TIFFClientOpen(
 	 * Setup the byte order handling.
 	 */
 	if (tif->tif_header.tiff_magic != TIFF_BIGENDIAN &&
-	    tif->tif_header.tiff_magic != TIFF_LITTLEENDIAN) {
+	    tif->tif_header.tiff_magic != TIFF_LITTLEENDIAN
+#if MDI_SUPPORT
+	    &&
+#if HOST_BIGENDIAN
+	    tif->tif_header.tiff_magic != MDI_BIGENDIAN
+#else
+	    tif->tif_header.tiff_magic != MDI_LITTLEENDIAN
+#endif
+	    ) {
+		TIFFError(name,  "Not a TIFF or MDI file, bad magic number %d (0x%x)",
+#else
+	    ) {
 		TIFFError(name,  "Not a TIFF file, bad magic number %d (0x%x)",
+#endif
 		    tif->tif_header.tiff_magic,
 		    tif->tif_header.tiff_magic);
 		goto bad;
